@@ -498,24 +498,6 @@ int potfile_remove_parse (hashcat_ctx_t *hashcat_ctx)
     }
   }
 
-  // do not use this unless really needed, for example as in LM
-
-  if (module_ctx->module_hash_decode_zero_hash != MODULE_DEFAULT)
-  {
-    module_ctx->module_hash_decode_zero_hash (hashconfig, hash_buf.digest, hash_buf.salt, hash_buf.esalt, hash_buf.hook_salt, hash_buf.hash_info);
-
-    if (hashconfig->potfile_keep_all_hashes == true)
-    {
-      potfile_update_hashes (hashcat_ctx, &hash_buf, NULL, 0, all_hashes_tree);
-    }
-    else
-    {
-      hash_t *found = (hash_t *) hc_bsearch_r (&hash_buf, hashes_buf, hashes_cnt, sizeof (hash_t), sort_by_hash_no_salt, (void *) hashconfig);
-
-      potfile_update_hash (hashcat_ctx, found, NULL, 0);
-    }
-  }
-
   const int rc = potfile_read_open (hashcat_ctx);
 
   if (rc == -1) return -1;
