@@ -45,6 +45,7 @@
 - Fixed internal access on module option attribute OPTS_TYPE_SUGGEST_KG with the result that it was unused
 - Fixed invalid handling of outfile folder entries for -m 22000
 - Fixed password reassembling for cracked hashes on host for slow hashes in optimized mode that are longer than 32 characters
+- Fixed race condition in potfile check during removal of empty hashes
 - Fixed race condition resulting in out of memory error on startup if multiple hashcat instances are started at the same time
 - Fixed rare case of misalignment of the status prompt when other user warnings are shown within the hashcat output
 - Fixed too early execution of some module functions which could make use of non-final values opts_type and opti_type
